# zero-ops

./: README.md  context_map_ip_team.json  parse.ipynb  pyproject.toml
fingerprints/: 1709221231_993295_F1D80B62-984A-46BA-BD57-FC5DF497FEF1.csv  Anomaly_raw_fingerprint_1.csv  Anomaly_raw_fingerprint_2022_01_24_0912.csv  Anomaly_raw_fingerprint_2022_01_30_0803.csv  Anomaly_raw_fingerprint_2022_02_05_0100.csv  Anomaly_raw_fingerprint_2022_02_22_1215.csv
prompts/: priming_prompt.md  priming_promt
