[tool.poetry]
name = "zero-ops"
version = "0.1.0"
description = ""
authors = ["Daniel Perez Jensen <daniel.jensen@rabobank.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
